--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 
 <body>
 <header>
-<h1><span class="blueColor">Roblox KiStudio</span> - Development Team for Russian Community</h1>
+<link rel="shortcut icon" href="/Media/siteIcon.ico" type="image/x-icon">
+
+ <h1><span class="blueColor">Roblox KiStudio</span> - KIRILLUSHKA (KYRYLO)</h1>
 </header>
 <button class="link_discord">Discord Server</button>
 <button class="link_robloxgroup">Roblox Group</button>
 
-<button class="link_robloxgroup"><a href="/blog/blogs.html">Our Blog</a></button>
+<button class="link_robloxgroup"><a href="/blog/blogs.html">Blog</a></button>
  
  
 
 
 <footer>
 
-<p>© Все права защищены. Roblox KiStudio, 2020.</p>
+<p>© All rights reserved. Roblox KiStudio, 2020.</p>
 
 </footer>
 
