--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <header>
-<link rel="shortcut icon" href="/Media/siteIcon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://kirillushka123.github.io/roblox-kistudio.github.io/Media/siteIcon.ico" type="image/x-icon">
 
  <h1><span class="blueColor">Roblox KiStudio</span> - KIRILLUSHKA (KYRYLO)</h1>
 </header>
