--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Roblox KiStudio - Home</title>
+<link rel="icon" href="https://kirillushka123.github.io/roblox-kistudio.github.io/Media/siteIcon.ico" type="image/x-icon">
+ 
 </head>
 
 
 <body>
 <header>
-<link rel="shortcut icon" href="https://kirillushka123.github.io/roblox-kistudio.github.io/Media/siteIcon.ico" type="image/x-icon">
 
  <h1><span class="blueColor">Roblox KiStudio</span> - KIRILLUSHKA (KYRYLO)</h1>
 </header>
