--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-<link rel="Icon of Roblox KiStudio" href="/Media/MainIcon.png" type="image/png">
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Roblox KiStudio - Home</title>
-<link rel="icon" href="https://kirillushka123.github.io/roblox-kistudio.github.io/Media/siteIcon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://kirillushka123.github.io/roblox-kistudio.github.io/Media/siteIcon.ico" type="image/x-icon">
  
  </head>
  
