--- a/index.html
+++ b/index.html
@@ -14,19 +14,23 @@
 
  <h1><span class="blueColor">Roblox KiStudio</span> - KIRILLUSHKA (KYRYLO)</h1>
  </header>
-
+ 
+ <center>
  <button class="link_discord">Discord Server</button>
  
  <button class="link_robloxgroup">Roblox Group</button>
 
  <button class="link_robloxgroup"><a href="/blog/blogs.html">Blog</a></button>
  
+ </center>
  
 
 
 <footer>
-
+ 
+ <center>
  <p>© All rights reserved. Roblox KiStudio, 2020.</p>
+ </center>
 
 </footer>
 
