--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
  <button class="link_robloxgroup">Roblox Group</button>
 
- <button class="link_robloxgroup"><a href="/blog/blogs.html">Blog</a></button>
+ <button class="link_blog">Blog</button>
  
  </center>
  
@@ -111,6 +111,10 @@ p{
 <script>
     document.querySelector(".link_discord").onclick = function(){
         window.location.href = 'https://discord.gg/sHeC7YvCbt';
+    }
+ 
+    document.querySelector(".link_blog").onclick = function(){
+        window.location.href = 'https://kirillushka123.github.io/roblox-kistudio.github.io/blog.html';
     }
 
 </script>
