--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
     font-weight: 100;
     cursor: pointer;
 }
+ 
+ .link_blog {
+    display: inline-block;
+    background: hsl(0, 0%, 44%);
+    color: #fff;
+    padding: 12px;
+    border: none;
+    border-radius: 3px;
+    text-decoration: none;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 1;
+    font-weight: 100;
+    cursor: pointer;
+}
 
 body {
     background: #F2F2F2;
