--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@ a:link {
 }
 
 .blueColor {
-    /* color: #188edd */
-    background: -webkit-linear-gradient(rgb(23, 23, 153),rgb(155, 155, 31));
+    color: #188edd;
+/*     background: -webkit-linear-gradient(rgb(23, 23, 153),rgb(155, 155, 31));
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent; */
 }
 
 button.link_discord {
