--- a/index.html
+++ b/index.html
@@ -55,6 +55,27 @@
 
 <div class="maincontent">
 
+    <!-- sword -->
+    <div class="na_green">
+        <div class="ndiv">
+            <div>
+                <h3 class="text">Model of Sword</h3>
+            </div>
+            <div>
+                <p class="text">This sword model was created for fun. This was done by </p><a href="#" class="text">David</a>.</p>
+                
+                <div>
+                    <img src="Media/blogs/modelsword/ex1.png" height="200" alt="Example 1">
+
+                    <img src="Media/blogs/modelsword/ex2.png" height="200" alt="Example 2">
+
+                    <img src="Media/blogs/modelsword/ex3.png" height="200" alt="Example 3">
+                </div>
+            
+            </div>
+        </div>
+    </div>
+
     <!-- update -->
     <div class="na_orange">
         <div class="ndiv">
@@ -166,8 +187,8 @@ a:link {
 }
 
 .blueColor {
-    color: #188edd;
-/*     background: -webkit-linear-gradient(rgb(23, 23, 153),rgb(155, 155, 31));
+    color: #188edd
+    /* background: -webkit-linear-gradient(rgb(23, 23, 153),rgb(155, 155, 31));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; */
 }
@@ -422,19 +443,19 @@ h3.text {
 
 
 <script>
-    document.querySelector(".link_discord").onClick = function(){
+    document.querySelector(".link_discord").onclick = function(){
         window.location.href = 'https://discord.gg/Npm7HkZUXk';
     }
 
-    document.querySelector(".link_contact").onClick = function(){
+    document.querySelector(".link_contact").onclick = function(){
         window.location.href = 'contact.html';
     }
 
-    document.querySelector(".link_otherdevs").onClick = function(){
+    document.querySelector(".link_otherdevs").onclick = function(){
         window.location.href = 'devs.html';
     }
 
-    document.querySelector(".link_robloxgroup").onClick = function(){
+    document.querySelector(".link_robloxgroup").onclick = function(){
         window.location.href = 'https://www.roblox.com/groups/15182749/Roblox-KiStudio-Developed-Developing#!/about';
     }
 
